Update requirements.txt for Python 3.11 compatibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-# Example of a requirements file
-
-# Dependency versions compatible with Python 3.11
-package1==1.0.0
-package2>=2.0.0
-# add other packages as necessary
+Flask==2.3.3
+Flask-CORS==4.0.0
+SQLAlchemy==2.0.21
+python-dotenv==1.0.0
+Gunicorn==21.2.0
